@@ -2,6 +2,10 @@
 ------------------
 - Also send DEVNAME in uevent when available. Thanks Chris Halse Rogers!
 - Send an "add" uevent when adding a device
+- umockdev-record --ioctl now stores the name of the device node recorded
+  in the trace. umockdev_testbed_load_ioctl(testbed, NULL, "device.ioctl")
+  now automatically associates the ioctl trace with the original device
+  node.
 
 0.5.1 (2014-01-16)
 ------------------
